welcome.lessons.welcome.methods.picture.PictureMono.scala.error
PictureMono:4: error: not found: value poseBrosse
def marque() {poseBrosse();leveBrosse(); }
              ^PictureMono:6: error: value droite is not a member of Unit
 def fairev() {gauche();avance();marque();recule();droite();avance();marque();avance();gauche();avance();marque();recule()droite(); }
                                                                                                                          ^