welcome.lessons.welcome.methods.picture.PictureMono.scala.code
override def ligne() {gauche();avance();avance();droite(); } 
def marque() {poseBrosse();leveBrosse(); }
 def fairev() {gauche();avance();marque();recule();droite();avance();marque();avance();gauche();avance();marque();recule()droite(); }
